--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,7 @@
     margin: 25px 0;
     font-size: 0.9em;
     font-family: sans-serif;
-    min-width: 800px;
+    min-width: 100%;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 .styled-table thead tr {
